#
# @file       CMakeLists.txt
# @brief
# @date       2024-02-17
# @author     Peter
# @copyright
#      Peter of [ThinkSpirit Laboratory](http://thinkspirit.org/)
#   of [Nanjing University of Information Science & Technology](http://www.nuist.edu.cn/)
#   all rights reserved
#

add_subdirectory(modifier)
